--- a/.vscode/codex-framework/frontend/codex-studio/package.json
+++ b/.vscode/codex-framework/frontend/codex-studio/package.json
@@ -16,6 +16,11 @@
     "test:puppeteer": "node ./tests/puppeteer-timeline.test.js",
     "test:integration": "node ./tests/integration-render-ledger.test.js"
   },
+  "scripts": {
+    "package-linux": "npx electron-builder --linux AppImage",
+    "package-macos": "npx electron-builder --mac dmg",
+    "package-windows": "npx electron-builder --win nsis"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -39,7 +44,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.1",
-    "electron": "^38.3.0",
+    
     "ffmpeg-static": "^5.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -55,6 +60,7 @@
     "wait-on": "^7.0.1",
     "vite": "^7.1.11",
     "electron-builder": "^25.0.0",
+    "electron": "^38.3.0",
     "http-server": "^14.1.1"
   }
 }
